fixed grid-template-columns property on grid-container: minmax px was too big for the column properties in .grid-container, changed to 300px

--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@
   padding: 10px;
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(auto-fill,minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fill,minmax(300px, 1fr));
 
 }
 
